Add notice at the bottom of the page

--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,10 @@
 
     <div id="preview" class="preview normal">The quick brown fox jumps over the lazy dog</div>
 
+    <div class="notice">
+       <a href="https://github.com/vishnuharidas/fontpreview-gpt">Code generated with ChatGPT</a>
+    </div>
+
     <script src="scripts.js"></script>
 </body>
 
